13/6 -- 2018:

Added the function string_to_utf8(JavaObjectString)
to translate a java String object into an Erlang UTF8 binary.

27/3 -- 2017:

The library now has better support for accessing non-public
members (methods and fields) by specifying the enter_classes option
when starting a node.
Example:

	start_node([{enter_classes,['MyClassyClass']}])
will permit non-public methods in instances of MyClassyClass (or static
methods) to be called, and fields are handled similarly.

4/11 -- 2016:

The library now handles widening conversions better, e.g., instead
of java:call_static(Node,'java.lang.math',pow,[2,3]) raising an exception as
before, JavaCall now widens the ints 2 and 3 automatically.

4/3 -- 2015:

If you are using Javassist to create new classes which should be callable
from Erlang, the library now supports "importing" such classes
using java:acquire_class(Node,ClassRef) where ClassRef is the
Class object corresponding to the newly created class. Using this mechanism
the new class becomes callable using its name, e.g., 
java:new(Node,'MyNewJavaAssistClass',[]).

The library now also supports adding additional parameters to the Java
interpreter in the java_options option, e.g., if for some reason 
the Hotspot compiler should not be run, the option
{java_options,["-Xint"]} disables it.

13/2 -- 2014:

JavaErlang now has support for implementing Java objects in Erlang
using the Javassist byte code manipulation library.
For details consult the new module "java_proxy" and the example
new example tests/swing_hello_world.erl.

11/2 -- 2014:

JavaErlang now has support for garbage collection of Java objects passed
to Erlang. This is (for now) disabled by default, to enable it use the
option {gc_enable,true} (an option to java:start_node/1).

Due to the support for garbage collection it is no longer safe to
check whether two Java object references in Erlang are equal using normal
Erlang term equality ("=="); the function java:eq/2 should be used instead.
